# pretender

./: .editorconfig  .gitignore  .vale.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  book.toml  justfile  lefthook.yml  llm.txt  llms.txt
.beads/: issues.jsonl
.devcontainer/: devcontainer.json
.dont/: AGENTS.md  config.toml  db.cozo  events.jsonl
.espectacular/cli-and-config/: complexity-reports-worst-units-first.toml  github-workflow-includes-sarif-upload.toml  guidance-mode-does-not-fail-violating-file.toml  heuristic-role-is-used-when-no-pragma-or-glob-applies.toml  hook-install-writes-fallback-shim.toml  hook-uninstall-removes-pretender-shim.toml  human-check-succeeds-on-clean-file.toml  interactive-init-can-install-hook-and-workflow.toml  json-report-is-emitted.toml  most-specific-glob-wins.toml  non-interactive-creates-config.toml  pragma-wins-over-path-glob.toml  python-plugin-manifest-parses.toml  rust-file-is-analysed.toml  (+8 more)
.pretender/: last-check.json
.wai/: .pipeline-run  config.toml
docs/: SUMMARY.md  agent-integration.md  configuration.md  feedback-loop-design.md  getting-started.md  llms.txt  mutation.md  plugins.md  status.md
metrics/: ruff.toml
openspec/: project.md
pretender/: Cargo.toml  README.md
pretender/.pretender/: last-check.json
pretender/.pretender/history/: events.jsonl
pretender/docs/: feedback-loop-design.md
pretender/languages/c/: README.md  metrics.scm
pretender/languages/cpp/: README.md
pretender/languages/csharp/: metrics.scm
pretender/languages/go/: metrics.scm
pretender/languages/java/: metrics.scm  plugin.toml
pretender/languages/javascript/: metrics.scm  plugin.toml
pretender/languages/julia/: metrics.scm
pretender/languages/python/: metrics.scm  plugin.toml
pretender/languages/ruby/: README.md  metrics.scm
pretender/languages/rust/: README.md
pretender/src/: c.rs  clojure.rs  config.rs  cpp.rs  csharp.rs  doctor.rs  duplication.rs  engine.rs  explain.rs  external_plugin.rs  git.rs  go.rs  history.rs  java.rs  javascript.rs  julia.rs  main.rs  metrics.rs  model.rs  mutation.rs  plugin.rs  python.rs  r.rs  roles.rs  ruby.rs  rust.rs  typescript.rs
pretender/tests/: cli_test.rs
pretender/tests/fixtures/: c_sample.c  clojure_sample.clj  go_sample.go  java_sample.java  js_simple.js  python_cognitive.py  r_sample.R  rust_simple.rs
queries/: python.scm
scripts/: update-homebrew.py  update-scoop.py
(+221 files in other folders)
