[package]
name = "pretender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pretender"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
tree-sitter = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
serde_json = "1"
