[package]
name = "pretender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pretender"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
miette = { version = "7", features = ["fancy"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde-sarif = "0.8.0"
serde_json = "1"
thiserror = "1"
toml = "0.8"
tree-sitter = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
