[package]
name = "pretender"
version = "0.2.0"
edition = "2021"
description = "Multi-language structural code-quality checks — complexity, duplication, mutation testing, and CI integration"
license = "Apache-2.0"
repository = "https://github.com/charly-vibes/pretender"
readme = "README.md"
keywords = ["code-quality", "linting", "complexity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pretender"
path = "src/main.rs"

[dependencies]
anyhow = "1"
git2 = { version = "0.21", default-features = false }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
miette = { version = "7", features = ["fancy"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde-sarif = "0.8.0"
serde_json = "1"
streaming-iterator = "0.1"
thiserror = "1"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-r = "1.3.0"
tree-sitter-julia = "0.23.1"
# Now compatible with tree-sitter 0.25+
tree-sitter-c-sharp = "0.23"
tree-sitter-clojure = "0.1"
